[package]
name = "opentune"
version = "0.0.1"
edition = "2024"

[dependencies]

cpal = "0.15"
ringbuf = "0.3"

rayon = "1.8"
aligned-vec = "0.5"

wgpu = { version = "0.20", optional = true }

serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
midir = "0.10.3"
arc-swap = "1.8.0"
crossbeam = "0.8.4"
tokio = "1.48.0"
symphonia = "0.5.5"
windows-sys = { version = "0.61.2", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security"] }
once_cell = "1.21.3"
walkdir = "2.5.0"
eframe = "0.33.3"
egui = "0.33.3"

[features]
gpu-acceleration = ["wgpu"]
simd-extreme = []
wgpu = ["dep:wgpu"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
